introduced the function for displaying logo or title, fixed the horizontal scroll problem, and changed the fonts,

--- a/src/App.css
+++ b/src/App.css
@@ -48,11 +48,10 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  position: sticky;
 }
 
-.appTitle {
-  color: #fff;
-}
 
 /* Styles for the header Part Ends */
 
